# engenharia_zero

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  app.py  docker-compose.yml  main.py  pyproject.toml  seed.py  teste_db.py
.github/workflows/: ci.yml
config/: settings.py
engenharia_zero/: database.py  models.py  schemas.py
migrations/: env.py
migrations/versions/: 52e8470a5e17_add_unit_price_and_constraints.py  bee22c3822e4_create_users_table.py  e5afed154d70_add_ecommerce_tables.py  f26377bbb4ed_add_is_admin_to_user_table.py
security/: auth.py
src/app/api/: auth.py  dependencies.py  login.py  main.py  user.py
src/app/core/: __init__.py  constants.py  exceptions.py  settings.py
src/app/db/: __init__.py  models.py  session.py
src/app/repositories/: __init__.py  user.py
src/app/schemas/: __init__.py  invoice.py  invoice_item.py  password.py  product.py  token.py  user.py
src/app/security/: __init__.py  auth.py
src/app/services/: __init__.py  user.py
tests/: conftest.py  test_api.py  test_auth.py  test_database.py  test_models.py  test_schemas.py
tests/api/: test_root.py  test_user_api.py
tests/integration/: test_user_repo.py
tests/unit/: test_user_schemas.py  test_user_service.py
