[project]
name = "engenharia-zero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "alembic>=1.18.4",
    "email-validator>=2.3.0",
    "fastapi>=0.136.0",
    "passlib[argon2]>=1.7.4",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.14.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.26",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py313"  # Adjust for your Python version
exclude = ["migrations", ".venv", "venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]  # E/F: pycodestyle/flake8, I: isort, UP: pyupgrade
ignore = ["E501"]  # Ignores long line (since the format takes care of that)

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ARG"]  # Ignores asserts and args not used in tests
"__init__.py" = ["F401"]     # Ignores imports not used in init

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false   

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

#[tool.mypy]
#python_version = "3.13"
#strict = true
#ignore_missing_imports = true
#plugins = ["pydantic.mypy"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
exclude = [".venv", "tests"] # We'll start by validating only the source code (src).

[[tool.mypy.overrides]]
module = "sqlalchemy.*"
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "migrations"]
tests = ["B201", "B301"] # Security testing examples

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "httpx>=0.28.1",
    "mypy>=1.20.2",
    "pip-audit>=2.10.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.10",
]
